[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modflowapi"
dynamic = ["version"]
authors = [
    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
    {name = "Martijn Russcher", email = "Martijn.Russcher@deltares.nl"},
    {name = "Christian D. Langevin", email = "langevin@usgs.gov"},
    {name = "Julian Hofer", email = "Julian.Hofer@deltares.nl"},
    {name = "Joshua D. Larsen", email = "jlarsen@usgs.gov"},
]
maintainers = [
    {name = "Joseph D. Hughes", email = "jdhughes@usgs.gov"},
]
description = "modflowapi is an extension to the xmipy Python package"
readme = "README.md"
keywords = ["MODFLOW", "groundwater", "hydrogeology", "bmi", "xmi"]
license = {text = "CC0"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "xmipy",  # develop branch from github.com/Deltares/xmipy
]

[project.optional-dependencies]
dev = ["modflowapi[test,lint]"]
test = [
    "filelock",
    "modflow-devtools",  # develop branch from github.com/MODFLOW-USGS/modflow-devtools
    "pytest",
    "pytest-order",
    "pytest-xdist",
]
lint = [
    "black",
    "flake8",
    "isort",
    "pylint",
]

[project.urls]
Repository = "https://github.com/MODFLOW-USGS/modflowapi"
Publication = "https://doi.org/10.1016/j.envsoft.2021.105257"

[tool.setuptools.dynamic]
version = {attr = "modflowapi.version.__version__"}

[tool.setuptools.packages.find]
include = ["modflowapi", "modflowapi.*"]

[tool.black]
line-length = 79
target_version = ["py37"]
