[metadata]
name = modflowapi
version = attr: modflowapi.version.__version__
description = modflowapi is an extension to the xmipy Python package
long_description = file: README.md
long_description_content_type = text/markdown
author = Joseph D. Hughes, Martijn Russcher, Christian D. Langevin, Julian Hofer, Joshua D. Larsen
author_email = jdhughes@usgs.gov, Martijn.Russcher@deltares.nl, langevin@usgs.gov, Julian.Hofer@deltares.nl, jlarsen@usgs.gov
maintainer = Joseph D. Hughes
maintainer_email = jdhughes@usgs.gov
license = CC0
license_files = LICENSE
platform = Windows, Mac OS-X, Linux
keywords = MODFLOW, groundwater, hydrogeology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/MODFLOW-USGS/modflowapi
download_url = https://pypi.org/project/modflowapi/

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    xmipy @ git+https://git@github.com/Deltares/xmipy@develop

[options.extras_require]
lint =
    black
    flake8
    pylint
    requests

test =
    %(lint)s
    pytest
    pytest-order

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    examples,
    autotest
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    F401, # 'module' imported but unused
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    E121, # continuation line under-indented for hanging indent
    E122, # continuation line missing indentation or outdented
    E126, # continuation line over-indented for hanging indent
    E127, # continuation line over-indented for visual indent
    E128, # continuation line under-indented for visual indent
    E203, # whitespace before
    E221, # multiple spaces before operator
    E222, # multiple spaces after operator
    E226, # missing whitespace around arithmetic operator
    E231, # missing whitespace after ','
    E241, # multiple spaces after ','
    E402, # module level import not at top of file
    E501, # line too long (> 79 characters)
    E502, # backslash is redundant between brackets
    E722, # do not use bare 'except'
    E741, # ambiguous variable name
    W291, # trailing whitespace
    W292, # no newline at end of file
    W293, # blank line contains whitespace
    W391, # blank line at end of file
    W503, # line break before binary operator
    W504  # line break after binary operator

statistics = True