[metadata]
name = modflowapi
version = attr: modflowapi.version.__version__
description = modflowapi is an extension to the xmipy Python package
long_description = file: README.md
long_description_content_type = text/markdown
author = Joseph D. Hughes, Martijn Russcher, Christian D. Langevin, Julian Hofer, Joshua D. Larsen
author_email = jdhughes@usgs.gov, Martijn.Russcher@deltares.nl, langevin@usgs.gov, Julian.Hofer@deltares.nl, jlarsen@usgs.gov
maintainer = Joseph D. Hughes
maintainer_email = jdhughes@usgs.gov
license = CC0
license_files = LICENSE
platform = Windows, Mac OS-X, Linux
keywords = MODFLOW, groundwater, hydrogeology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/MODFLOW-USGS/modflowapi
download_url = https://pypi.org/project/modflowapi/

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    git+https://git@github.com/Deltares/xmipy@develop

[options.extras_require]
lint =
    black
    flake8
    pylint
    requests

test =
    %(lint)s
    pytest
	pytest-xdist
	pytest-order
    filelock
    modflow-devtools @ git+https://git@github.com/MODFLOW-USGS/modflow-devtools@develop

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    examples,
    autotest
ignore =
    F401,
    E121,
    E122,
    E126,
    E127,
    E128,
    E203,
    E221,
    E222,
    E226,
    E231,
    E241,
    E402,
    E501,
    E502,
    E722,
    E741,
    W291,
    W292,
    W293,
    W391,
    W503,
    W504 

statistics = True